rust/macros/tests/ui/fail/authority_observational_choice_with_check.stderr
error: Extension error: effect invocation `Runtime.watchPresence` is observational and may not be invoked with `check`
  --> tests/ui/fail/authority_observational_choice_with_check.rs:4:1
   |
 4 | / tell! {
 5 | |     effect Runtime
 6 | |       observe watchPresence : Session -> PresenceView
...  |
23 | |             Coordinator -> Worker : Abort
24 | | }
   | |_^
   |
   = note: this error originates in the macro `tell` (in Nightly builds, run with -Z macro-backtrace for more info)
